--- a/views/dropin-advance.ejs
+++ b/views/dropin-advance.ejs
@@ -10,8 +10,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Adyen SDK -->
-  <link rel="stylesheet" href="https://checkoutshopper-<%= env %>.adyen.com/checkoutshopper/sdk/<%= sdkVersion %>/adyen.css" />
-  <script src="https://checkoutshopper-<%= env %>.adyen.com/checkoutshopper/sdk/<%= sdkVersion %>/adyen.js"></script>
+  <script src="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.3.0/adyen.js"
+  integrity="sha384-PpkKjJdtlCZuAK7HWeMaOwzrQMGgAWThLG+QZe0sxlohYwfVPP+G65HBrWbgwSoE"
+  crossorigin="anonymous"></script>
+
+<link rel="stylesheet"
+  href="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.3.0/adyen.css"
+  integrity="sha384-pC2TKxh6gMtWIUiXzlw5Jnq9ZtnyuPT0ymaHY6skdegLVNDMNiiQ7/NFixA87/Wb"
+  crossorigin="anonymous">
 
   <script>
     const clientKey = "<%= clientKey %>";
