Some temp changes

--- a/views/dropin-advance.ejs
+++ b/views/dropin-advance.ejs
@@ -133,7 +133,7 @@
         countryCode: "SG",
         paymentMethodsConfiguration:{
           card:{
-            enableStoreDetails:true
+            enableStoreDetails:"true",
           },
         },
         onSubmit: async (state, dropin) => {
