--- a/views/dropin-session.ejs
+++ b/views/dropin-session.ejs
@@ -91,11 +91,11 @@
         body: JSON.stringify({
           isLive,
           merchantPrefix,
-          amount: { value: 100, currency: "SGD" },
+          amount: { value: 0, currency: "SGD" },
           reference: "DROPIN_ORDER_DEMO",
           returnUrl: window.location.href,
           countryCode:"SG",
-          storePaymentMethodMode:"askForConsent"
+          storePaymentMethodMode:"enabled"
         })
       });
 
